# jni-ffmpeg-video-writer

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-jni.cpp  video_writer.cpp  video_writer.h
app/src/main/java/com/example/hellojni/: HelloJni.kt
app/src/main/res/layout/: activity_hello_jni.xml
